--- a/pep-9999.rst
+++ b/pep-9999.rst
@@ -29,12 +29,12 @@ In the context of web development Python can do more than providing
 REST APIs via http.  With the trend to Server-Side-Rendering,
 we face a fundamental question:
 
-How to create HTML with Python?
+How to create save HTML with Python?
 
 If you use the FrOW pattern (HTML fragments over the wire) [#FrOW]_, then you
 will be writing small methods returning small HTML fragments.
 
-As a developer I want to pass escaped data into template literals to be as simple as possible.
+As a developer I want to pass escaped data into template literals as simple as possible.
 
 Rationale
 =========
