--- a/pep-9999.rst
+++ b/pep-9999.rst
@@ -204,7 +204,7 @@ Using ``locals()`` to pass variable to the method is not a solution.
 Example::
 
     name = 'Mary & Bob'
-    format_html('<h1>Welcome {name}</h1>', locals())
+    format_html('<h1>Welcome {name}</h1>', **locals())
 
 Above example has a major drawback.  IDEs and linters think the variable "name"
 is not used. The variable would be colored in a different way, which confuses
