--- a/pep-9999.rst
+++ b/pep-9999.rst
@@ -62,6 +62,15 @@ not be escaped again.
 
 Template Literals will solve both drawbacks with a easy to read and write syntax.
 
+Goal
+====
+
+The goal is to reduce above example to::
+
+    `<h1>Hi {name}!</h1>
+        Your messages: {messages}`
+
+
 Specification
 =============
 
@@ -146,6 +155,11 @@ This way the logging handler has access to the actual value, and could encode it
 the log processing tools, don't need to do error-prone parsing of the logged string.
 
 .. _Logging Style Guide of Google: https://google.github.io/styleguide/pyguide.html#3101-logging
+
+
+I18N
+----
+
 
 
 Security Implications
