--- a/pep-9999.rst
+++ b/pep-9999.rst
@@ -140,6 +140,22 @@ For curious readers, here is the implementation of `conditional_escape()`_
 .. _JavaScript Template Literals: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals
 .. _conditional_escape(): https://github.com/django/django/blob/824981b2dc61a76a59d0e470bed6e61626a44ccf/django/utils/html.py#L92
 
+Alternative Data Structure
+==========================
+
+We could use a more condensed data structure: The result is always a list with an odd length.
+
+Examples::
+
+
+
+    `` --> ['']
+    `foo' --> ['foo']
+    `{expr}` --> [expr]
+    `foo{expr}bar` --> ['foo', expr, 'bar']
+
+
+
 Use-cases beside HTML
 =====================
 
