Fix typo "safe" vs "save"
Fix typo "safe" vs "save" in "How to create save HTML with Python?"

--- a/pep-9999.rst
+++ b/pep-9999.rst
@@ -29,7 +29,7 @@ In the context of web development Python can do more than providing
 REST APIs via http.  With the trend to Server-Side-Rendering,
 we face a fundamental question:
 
-How to create save HTML with Python?
+How to create safe HTML with Python?
 
 If you use the FrOW pattern (HTML fragments over the wire) [#FrOW]_, then you
 will be writing small methods returning small HTML fragments.
